app/eventyay/static/common/css/base.css
/* ... */
@media (min-width: 768px) {
  .d-md-block {
    display: block !important;
  }
  .d-md-flex {
    display: flex !important;
  }
}

@media (max-width: 768px) {
  .table-responsive-always {
    display: block;
    width: 100%;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
  }
  .col-md-1,
  .col-md-2,
  .col-md-3,
  .col-md-4,
  .col-md-5,
  .col-md-6,
  .col-md-7,
  .col-md-8,
  .col-md-9,
  .col-md-10,
  .col-md-11,
  .col-md-12 {
    flex: 0 0 100%;
    max-width: 100%;
  }
}

@media print {
  *,
  *::before,
  *::after {
    text-shadow: none !important;
    box-shadow: none !important;
  }
  body {
    color: black;
    background: white;
    overflow: visible !important;
    height: auto;
  }
  .badge {
    border: 1px solid black;
  }
  .d-print-none {
    display: none !important;
  }
  a:not([role="button"]) {
    text-decoration: underline;
  }
  pre {
    white-space: pre-wrap !important;
  }
  pre,
  blockquote {
    border: 1px solid var(--color-grey-medium);
    page-break-inside: avoid;
  }
  thead {
    display: table-header-group;
  }

  tr,
  footer,
  svg,
  img {
    page-break-inside: avoid;
  }
  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3,
  h4,
  h5,
  summary {
    page-break-after: avoid;
  }

  a[href]::after {
    content: " (" attr(href) ")";
  }
  a[href^="#"]::after {
    content: "";
  }

  nav.navbar {
    display: none;
  }
  @page {
    size: A4 landscape;
    margin: 5mm;
  }
}

